--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="interval-input">
       <input id="interval" placeholder="Enter Interval in Milliseconds" style="width: 30vw;"></input>
-      <button id="save_lincoln">Save Lincoln!</button>
+      <button id="save_lincoln" onclick="test()"">Save Lincoln!</button>
     </div>
     <div id="images" style="display: block; position: relative;">
       <img id="background" src="Abraham.png" style="position:absolute; " alt="abraham lincoln">
